# lcs_parcels

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/skills/jupytext/: SKILL.md
.claude/skills/zotero/: SKILL.md
.claude/skills/zotero/references/: api-cheatsheet.md
.claude/skills/zotero/scripts/: zot.py
.github/workflows/: ci.yml
docs/: api.md  architecture.md  notation.md
examples/: cabo_verde_ftle.ipynb  cabo_verde_ftle.md  cabo_verde_ftle.py  cabo_verde_lcs.ipynb  cabo_verde_lcs.md  cabo_verde_lcs.py  cabo_verde_lcs_evolution.ipynb  cabo_verde_lcs_evolution.md  cabo_verde_lcs_evolution.py  example_grid_pset.ipynb  example_grid_pset.md  example_grid_pset.py
plans/: lcs-api-design.md  lcs-evolution-q1.md  lcs-time-evolution.md  seed-flowmap-design.md  timing-design.md
plans/done/: lcs-evolution-q1.md  seed-flowmap-design.md  timing-design.md
src/lcs_parcels/: __init__.py  grid.py  grids.py  tensorlines.py
tests/: conftest.py  test_evolution.py  test_grid.py  test_grids.py  test_lcs_parcels.py  test_operators.py  test_roundtrip.py  test_tensorlines.py
