[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lcs_parcels"
version = "0.1.0"
description = "Lagrangian coherent structures with Parcels."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["src/lcs_parcels"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64", "win-64"]

[tool.pixi.pypi-dependencies]
lcs_parcels = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
pytest = ">=9.0.3,<10"
